--- a/08-HTML/homework/style.css
+++ b/08-HTML/homework/style.css
@@ -1,13 +1,18 @@
+body{
+	background-image: url(https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80);
+	display: flex;
+	justify-content: center;
+}
 h1{
-	color:aqua;
+	color:white;
 }
 
 #thirdDiv {
-	background-color: cadetblue;
+	background-color: white;
 	height: 600px;
 	width: 500px;
 	padding: 50px;
-	border: 5px solid black;
+	border: 5px solid white;
 }
 img {
 	width: 400px
@@ -15,4 +20,7 @@ img {
 #spanId {
 	font-size: 18px;
 	margin: 50px;
+}
+div{
+	text-align: center;
 }
